sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:4: error: not found: value ecart
  ecart = getNombreValeurs()/2
  ^AlgShellSort:6: error: not found: value ecart
  while (ecart > 0) {
         ^